Fixed zooming on mobile devices when focusing input element

--- a/styles/prosilver/theme/mchat.css
+++ b/styles/prosilver/theme/mchat.css
@@ -388,6 +388,7 @@ textarea#mchat-input {
 
 	#mchat-input {
 		width: 95% !important;
+		font-size: 16px;
 	}
 
 }
